--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,300;1,400&display=swap');
+
+// Global
+
+body{
+    background-color: #6489ac;
+    color: #fdfefc;
+    font-family: 'Raleway', sans-serif;
+}
+
+// Utile
+
+.flex{
+    display: flex;
+}
+
+.align-center{
+    align-items: center;
+}
+
+.justify-center{
+    justify-content: center;
+}
+
+.justify-between{
+    justify-content: space-between;
+}
