--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,11 @@ body{
 .justify-between{
     justify-content: space-between;
 }
+
+a {
+	text-decoration: none;
+}
+
+*[routerlink] {
+	cursor: pointer;
+}
