--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,8 @@ body{
     background-color: #6489ac;
     color: #fdfefc;
     font-family: 'Raleway', sans-serif;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 // Utile
