--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -52,15 +52,21 @@ $grey: #afafaf;
                     margin: 7px 8px;
                     cursor: pointer;
                     padding: 13px 2vw;
-                    color: $grey;
+                    color: $light-blue;
                     border-radius: 50px;
                     transition: all .1s;
                     font-weight: 500;
                     font-size: 16px;
                     letter-spacing: 1px;
                     white-space: nowrap;
+                    border: 2px solid white;
                     
-                    &:hover, &:focus, &.active{
+                    &:hover, &:focus{
+                        border: 2px solid $light-blue;
+                    } 
+                    
+                    &.active{
+                        border: 2px solid $light-blue;
                         background: $light-blue;
                         color: $white;
                     }
