--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+<main>
+    <section class="flex align-center no-margin hero-section">
+        <div class="w-50 col-p">
+            <h1>
+                Discover our
+                <br>
+                universe
+            </h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at nunc id leo pretium tempus. Nulla finibus leo at neque efficitur pellentesque.
+            </p>
+            <button class="btn">
+                Let's go 
+            </button>
+        </div>
+        <div class="w-50 lp-img">
+            <video width="100%" height="100%" autoplay autobuffer="true" loop=true controls=0 poster="/assets/img/lp-img.webp">
+                <source src="/assets/video/lp-img.mp4" type="video/mp4">
+            </video>
+        </div>
+    </section>
+
+    <section>
+
+    </section>
+
+</main>
