--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,300;1,400&display=swap');
 
 // Global
+$dark-blue: #00295b;
 
 body{
-    background-color: #6489ac;
+    background-color: #000000;
     color: #fdfefc;
     font-family: 'Raleway', sans-serif;
     max-width: 100vw;
@@ -34,4 +35,21 @@ a {
 
 *[routerlink] {
 	cursor: pointer;
+}
+
+.btn {
+    background: #fff;
+    border-radius: 50px;
+    padding: 15px 35px;
+    color: $dark-blue;
+    font-size: 16px;
+    margin: 5px 0;
+    border: 2px solid white;
+    transition: all .1s;
+    cursor: pointer;
+
+    &:hover{
+        background: none;
+        color: white;
+    }
 }
