--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,11 @@ body{
     display: flex;
 }
 
+.flex-column{
+    display: flex;
+    flex-direction: column;
+}
+
 .align-center{
     align-items: center;
 }
