--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -15,7 +15,7 @@
 				<label for="message">Message</label>
 				<textarea id="message" formControlName="message"></textarea>
 			</div>
-			<button class="btn btn-success">Envoyer</button>
+			<button class="btn btn-dark">Envoyer</button>
 		</form>
 	</div>
 </div>
