--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -14,7 +14,7 @@
             </button>
         </div>
         <div class="w-50 lp-img">
-            <video width="100%" height="100%" autoplay autobuffer="true" loop=true controls=0 poster="/assets/img/lp-img.webp">
+            <video width="100%" height="100%" autoplay autobuffer="true" loop=true poster="/assets/img/lp-img.webp">
                 <source src="/assets/video/lp-img.mp4" type="video/mp4">
             </video>
         </div>
