--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,12 +49,25 @@ a {
     color: $dark-blue;
     font-size: 16px;
     margin: 5px 0;
-    border: 2px solid white;
+    border: 3px solid white;
     transition: all .1s;
     cursor: pointer;
 
     &:hover{
         background: none;
         color: white;
+    }
+
+    &.btn-dark{
+        background: #000000;
+        color: white;
+        border: 3px solid #000000;
+        transition: all .1s;
+        cursor: pointer;
+
+        &:hover{
+            background: none;
+            color: #000000;
+        }
     }
 }
