--- a/src/app/views/blog/blog.component.html
+++ b/src/app/views/blog/blog.component.html
@@ -1,1 +1,10 @@
-<p>blog works!</p>
+<main>
+	<h1>Blog</h1>
+
+	<!-- Articles -->
+	<div class="article-container">
+        <app-article *ngFor="let article of articles" [content]="article"
+			(articleIsLiked)="likeArticle($event)"></app-article>
+	</div>
+
+</main>
