--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -1,21 +1,24 @@
-<div class="content">
-	<h2>Contactez nous !</h2>
+<main>
+	<h1>Get in touch</h1>
+	<div class="content">
+		<h2>Contactez nous !</h2>
 
-	<div class="card">
-		<form>
-			<div class="form-group" [formGroup]="form">
-				<label for="subject">Sujet</label>
-				<input type="text" id="subject" formControlName="subject" />
-			</div>
-			<div class="form-group" [formGroup]="form">
-				<label for="email">Addresse email</label>
-				<input type="text" id="email" formControlName="email" />
-			</div>
-			<div class="form-group" [formGroup]="form">
-				<label for="message">Message</label>
-				<textarea id="message" formControlName="message"></textarea>
-			</div>
-			<button class="btn btn-dark">Envoyer</button>
-		</form>
+		<div class="card">
+			<form>
+				<div class="form-group" [formGroup]="form">
+					<label for="subject">Sujet</label>
+					<input type="text" id="subject" formControlName="subject" />
+				</div>
+				<div class="form-group" [formGroup]="form">
+					<label for="email">Addresse email</label>
+					<input type="text" id="email" formControlName="email" />
+				</div>
+				<div class="form-group" [formGroup]="form">
+					<label for="message">Message</label>
+					<textarea id="message" formControlName="message"></textarea>
+				</div>
+				<button class="btn btn-dark">Envoyer</button>
+			</form>
+		</div>
 	</div>
-</div>
+</main>
