--- a/src/app/views/error/error.component.html
+++ b/src/app/views/error/error.component.html
@@ -1,1 +1,38 @@
-<p>error works!</p>
+<div class="box">
+    <div class="box__ghost">
+      <div class="symbol"></div>
+      <div class="symbol"></div>
+      <div class="symbol"></div>
+      <div class="symbol"></div>
+      <div class="symbol"></div>
+      <div class="symbol"></div>
+      
+      <div class="box__ghost-container">
+        <div class="box__ghost-eyes">
+          <div class="box__eye-left"></div>
+          <div class="box__eye-right"></div>
+        </div>
+        <div class="box__ghost-bottom">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+      <div class="box__ghost-shadow"></div>
+    </div>
+    
+    <div class="box__description">
+      <div class="box__description-container">
+        <div class="box__description-title">Whoops!</div>
+        <div class="box__description-text">It looks like you are lost in space!</div>
+      </div>
+      
+      <br>
+      
+      <a routerLink="/" routerLinkActive="active" role="button">Find my way back</a>
+      
+    </div>
+    
+  </div>
