--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,10 @@ body{
 
 // Utile
 
+main{
+    margin: 0 50px;
+}
+
 .flex{
     display: flex;
 }
@@ -46,7 +50,7 @@ a {
     background: #fff;
     border-radius: 50px;
     padding: 15px 35px;
-    color: $dark-blue;
+    color: #000000;
     font-size: 16px;
     margin: 5px 0;
     border: 3px solid white;
@@ -69,5 +73,16 @@ a {
             background: none;
             color: #000000;
         }
+    }
+}
+
+main{
+
+    h1{
+        margin: 70px 0;
+        padding: 0;
+        font-size: 75px;
+        font-weight: 700;
+        line-height: .9;
     }
 }
