--- a/src/app/views/team/team.component.html
+++ b/src/app/views/team/team.component.html
@@ -1,26 +1,40 @@
-<main>
-    <h1>About us</h1>
+<h1>Team</h1>
 
-	<div style="max-width: 250px;" [formGroup]="formGrp">
-		<h2>Ajouter un membre</h2>
-		<div class="flex-column">
-			<label>Prénom</label>
-			<input type="text" formControlName="firstName">
+<div id="team">
+	<div id="team-form">
+		<div style="max-width: 250px;" [formGroup]="formGrp">
+			<h2>Ajouter un membre</h2>
+			<div class="flex-column">
+				<label>Prénom</label>
+				<input type="text" formControlName="firstName">
+			</div>
+
+			<div class="flex-column">
+				<label>Nom</label>
+				<input type="text" formControlName="lastName">
+			</div>
+			<div class="flex-column">
+				<label>Framework</label>
+				<select formControlName="framework">
+					<option value="angular">Angular</option>
+					<option value="vue">Vue</option>
+					<option value="react">React</option>
+				</select>
+			</div>
+
+			<button (click)="addUser()">Ajouter</button>
 		</div>
-	
-		<div class="flex-column">
-			<label>Nom</label>
-			<input type="text" formControlName="lastName">
-		</div>
-		<div class="flex-column">
-			<label>Framework</label>
-			<select formControlName="framework">
-				<option value="angular">Angular</option>
-				<option value="vue">Vue</option>
-				<option value="react">React</option>
-			</select>
-		</div>
-	
-		<button class="btn" (click)="addUser()">Ajouter</button>
 	</div>
-</main>
+
+	<div id="team-list">
+		<app-member *ngFor="let user of users"
+					[id]="user.id ? user.id : 0"
+					[firstname]="user.firstname"
+					[lastname]="user.lastname"
+					[framework]="user.framework"
+					(removeUser)="removeUser($event)">
+		</app-member>
+	</div>
+</div>
+
+
