--- a/src/app/views/team/component/member/member.component.scss
+++ b/src/app/views/team/component/member/member.component.scss
@@ -3,7 +3,7 @@
 	align-items: center;
 	justify-content: space-between;
 
-	margin-bottom: 10px;
+	margin: 0 10px 10px;
 	padding: 7.5px 10px;
 
 	background-color: #ffffff;
@@ -11,7 +11,7 @@
 
 	border-radius: 5px;
 
-	min-width: 400px;
+	min-width: 375px;
 
 	.member-details {
 		display: flex;
