--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -1,20 +1,12 @@
 <div class="content">
 	<h2>Contactez nous !</h2>
 
-	<div class="card">
+	<div class="card" [formGroup]="form">
 		<form>
-			<div class="form-group" [formGroup]="form">
-				<label for="subject">Sujet</label>
-				<input type="text" id="subject" formControlName="subject" />
-			</div>
-			<div class="form-group" [formGroup]="form">
-				<label for="email">Addresse email</label>
-				<input type="text" id="email" formControlName="email" />
-			</div>
-			<div class="form-group" [formGroup]="form">
-				<label for="message">Message</label>
-				<textarea id="message" formControlName="message"></textarea>
-			</div>
+			<app-text-input [control]="formSubject" id="subject" label="Sujet"></app-text-input>
+			<app-text-input [control]="formEmail" id="email" label="Addresse email"></app-text-input>
+			<app-textarea-input [control]="formMessage" id="message" label="Message"></app-textarea-input>
+
 			<button class="btn btn-success">Envoyer</button>
 		</form>
 	</div>
