--- a/src/app/views/team/team.component.html
+++ b/src/app/views/team/team.component.html
@@ -1,5 +1,7 @@
 <h1>Team</h1>
 
+<sh-navbar></sh-navbar>
+
 <div class="card small-card" [formGroup]="formGrp">
 	<h2>Ajouter un membre</h2>
 	<app-text-input [control]="formFirstName" id="firstName" label="Prénom"></app-text-input>
